# ayra-sales-assistant

./: .dockerignore  .env.example  .gitignore  CLOUD_ENV_SETUP.md  Dockerfile  README.md  connections.json  package.json  pyproject.toml  run_local.py
config/: README.md  tools.alloydb-postgres.yaml  tools.bigquery.yaml  tools.firestore.yaml  tools.mindsdb.yaml  tools.mssql.yaml  tools.mysql.yaml  tools.neo4j.yaml  tools.oceanbase.yaml  tools.postgres.yaml  tools.singlestore.yaml  tools.snowflake.yaml  tools.spanner-postgres.yaml  tools.spanner.yaml  tools.sqlite.yaml  tools.tidb.yaml
scripts/: provision_secrets.py  seed_cloudsql.py  seed_mssql.py
scripts/archive/: chisel_relay_setup.sh.archived
scripts/cloud_vpn/: setup_cloud_vpn.sh
scripts/docker_vpn/: Dockerfile  entrypoint.sh  fix_openssl.py  run_vpn_tunnel.sh.example  stop_vpn_tunnel.sh
scripts/vpn_relay_vm/: setup_vpn_relay_vm.sh  setup_vpn_relay_vm.sh.example
sql/: min_prod_seed.sql  min_prod_seed_mssql.sql
src/agentic_rag/: agent.py  config.py  connections.py  pii_masking.py  query_rewriter.py  requirements.txt  server.py  tenant_config.py
src/support_agent/: __init__.py  agent.py
tests/: test_accuracy.py  test_error_handling.py  test_query_rewriter.py  test_router_agent.py  test_sql_guardrails.py
ui/: Dockerfile  admin.js  app.js  auth.js  index.html  nginx.conf  styles.css  support.js
